--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ function update() {
     this.game.physics.arcade.collide(viruses, walls, collidesWall, null, this);
     count_text.text = click_count;
     
-    if (spawning_button.isDown && click_count >= 10){
-        spawnViruses(200, 200);
-        click_count -= 10;
+    if (spawning_button.isDown && click_count >= 100){
+        spawnViruses();
+        click_count -= 100;
     }
 }
 
@@ -94,11 +94,13 @@ function onDown(sprite, pointer) {
     console.log(click_count);
     
 }
-function spawnViruses(xpos, ypos){
-    var virus = viruses.create(xpos, ypos, 'virus');
+function spawnViruses(){
+    var virus = viruses.create(X, Y, 'virus');
     virus.anchor.setTo(0.5, 0.5);
     virus.inputEnabled = true;
     virus.rotation_speed = 2 * Math.random() - 1;
+    var X = 500 * Math.random() + 300;
+    var Y = 400 * Math.random() + 300;
     virus.body.velocity.x = 300 * Math.random() - 150;
     virus.body.velocity.y = 300 * Math.random() - 150;
     virus.body.bounce.set(1);
