--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 var game = new Phaser.Game(320, 480, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
 function preload() {
-    game.load.image('moneyButton', 'sprites/MoneyButton.png');
+    game.load.image('moneyButton', 'sprites/EliasButton.png');
     game.load.image('noButton', 'sprites/NoButton.png');
     game.load.image('purpleButton', 'sprites/AddPurple.png');
     game.load.image('greenButton', 'sprites/AddGreen.png');
